[package]
name = "rust_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
reqwest = "0.11"
lapin = "1.8"
tokio = { version = "1", features = ["full"] }
tokio-amqp = "0.3"
futures-util = "0.3"
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"